@@ -55,6 +55,9 @@ Library
 
 - Issue #11814: Fix likely typo in multiprocessing.Pool._terminate().
 
+- Issue #11747: Fix range formatting in difflib.context_diff() and
+  difflib.unified_diff().
+
 - Issue #8428: Fix a race condition in multiprocessing.Pool when terminating
   worker processes: new processes would be spawned while the pool is being
   shut down.  Patch by Charles-François Natali.
